<resources>
    <string name="app_name">Story App</string>
    <string name="signup">Signup</string>
    <string name="login">Login</string>
    <string name="title_signup_page">Fill all with your identity</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="message_login_page">Welcome to Story App</string>
    <string name="name">Name</string>
    <string name="footer_new_account">Don\'t have account?&#160;</string>
    <string name="footer_have_account">Already have a account?&#160;</string>
    <string name="greeting">Halo %1$s,</string>
    <string name="logout">Logout</string>
    <string name="title_home">Home</string>
    <string name="profile">Profile</string>
    <string name="title_activity_main">Main</string>
    <string name="error_min_6_char">Password must be 6 or more</string>
    <string name="hint_password">Password</string>
    <string name="title_change_language">"Change Language"</string>
    <string name="title_sory">Sory</string>
    <string name="try_again">Try Again</string>
    <string name="error_fill_email">Please fill email</string>
    <string name="failed_login">Failed login</string>
    <string name="error_fill_password">Please fill password</string>
    <string name="error_fill_name">Please fill name</string>
    <string name="title_yeah">Yeah!</string>
    <string name="account_create_success">Akunnya sudah jadi.</string>
    <string name="next">Lanjut</string>
    <string name="failed_register">Failed Register</string>
    <string name="shared_transition">shared transition</string>
    <string name="fail_loading">Sory, please try again</string>
    <string name="title_detail_story">Detail Story</string>
    <string name="title_add_story">Add Story</string>
    <string name="title_camera">Camera</string>
    <string name="title_gallery">Gallery</string>
    <string name="hint_description">Your story…</string>
    <string name="title_upload">Upload</string>
    <string name="error_valid_email">Enter valid Email address</string>
    <string name="empty_text">There is not Story yet</string>
    <string name="title_map">Map</string>
    <string name="error_loading">Fail to load, please try again</string>

    // Desc
    <string name="desc_switch_camera">switch camera</string>
    <string name="desc_capture">capture</string>
    <string name="message_permission_failed">permission not available</string>
</resources>